--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <meta name="theme-color" content="#000000" />
    <meta name="description" content="Web site created using create-react-app" />
+   <meta property="og:image:secure_url" content="./ogTag.png" />
+   <meta property="og:image:type" content="image/png" />
+   <meta property="og:image:width" content="400" />
+   <meta property="og:image:height" content="300" />
    <link rel="apple-touch-icon" href="./animated_logo.svg" />
    <!--
       manifest.json provides metadata used when your web app is installed on a
