--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <meta name="theme-color" content="#000000" />
    <meta name="description" content="Web site created using create-react-app" />
-   <meta property="og:image:secure_url" content="./ogTag.png" />
+   <meta property="og:image:secure_url" content="https://mf-barasingha.netlify.app/static/media/animated_logo.1088ecf2411d2d06780667937eee5629.svg" />
    <meta property="og:image:type" content="image/png" />
    <meta property="og:image:width" content="400" />
    <meta property="og:image:height" content="300" />
